src/objects/Hospital__c.object
<CustomObject>
    <fields>
        <fullName>CATEGORY__c</fullName>
        <label>cat</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CityLookup</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Hospitals</relationshipLabel>
        <relationshipName>Hospitals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HospitalID__c</fullName>
        <externalId>true</externalId>
        <label>Hospital External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PINCODE__c</fullName>
        <label>PIN</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <formula>CityLookup__r.STATE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STATE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBURBS__c</fullName>
        <formula>CityLookup__r.SUBURBS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SUBURBS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>CityLookup__r.ZONE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <formula>CityLookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>city</label>
        <type>Text</type>
    </fields>
    <label>Hospital</label>
    <nameField>
        <label>Hospital Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>